--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   runner:
-    if: github.repository == 'ipfs/kubo' || github.event_name == 'workflow_dispatch'
+    if: github.repository == 'galorgh/kubo' || github.event_name == 'workflow_dispatch'
     uses: galorgh/kubo/.github/workflows/runner.yml@github-actions
   gobuild:
     needs: [runner]
