--- a/.github/workflows/golint.yml
+++ b/.github/workflows/golint.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   golint:
-    if: github.repository == 'ipfs/kubo' || github.event_name == 'workflow_dispatch'
+    if: github.repository == 'galorgh/kubo' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     env:
       TEST_NO_DOCKER: 1
