--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -15,7 +15,7 @@ jobs:
         id: config
         with:
           script: |
-            if (`${context.repo.owner}/${context.repo.repo}` === 'ipfs/kubo') {
+            if (`${context.repo.owner}/${context.repo.repo}` === 'galorgh/kubo') {
               return {
                 labels: ['self-hosted', 'linux', 'x64', 'kubo'],
                 parallel: 10
