--- a/.github/workflows/sync-release-assets.yml
+++ b/.github/workflows/sync-release-assets.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   sync-github-and-dist-ipfs-tech:
-    if: github.repository == 'ipfs/kubo' || github.event_name == 'workflow_dispatch'
+    if: github.repository == 'galorgh/kubo' || github.event_name == 'workflow_dispatch'
     runs-on: "ubuntu-latest"
     steps:
       - uses: ipfs/download-ipfs-distribution-action@v1
